# pixy

./: .flake8  .gitignore  .pre-commit-config.yaml  DESIGN.md  MANIFEST.in  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
src/pixie/: ast.py  genparser.py  parse.py  transpile.py
src/pixie/grammar/: pypixie.gram
src/pixieverse/pixie/: __main__.py  cli.py  genparser.py  import_hook.py  transpile.py
src/pixieverse/pixie/grammar/: pypixie.gram
src/pixieverse/pixie/render/: runtime.py
src/pixyverse/pixy/: __main__.py  cli.py  genparser.py  transpile.py
src/pixyverse/pixy/grammar/: pypixie.gram
src/test/: test_parse.py  test_pixie.py  test_transpile.py
src/test/data/: invalid1.pix  invalid2.pix
src/tests/: test_parse.py  test_transpile.py
tests/: test_transpile.py
tests/data/: invalid0.pix
