[project]
name = "pixyverse.pixy"
dynamic = ["version"]
authors = [
  { name="Pradeep Roark", email="pradeep.roark@gmail.com" },
]
description = "A package to parse pixy component files which allow you to author components in python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries",

  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["templating","web","parser","jsx"]
dependencies = [
  "pegen >= 0.3.0"
]

[project.optional-dependencies]
dev = [
  "build",
  "pre-commit",
  "black",
  "flake8",
  "mypy",
  "types-setuptools"
]

publish = ["twine"]

[project.scripts]
pixy = "pixyverse.pixy.cli:runtranspile"


[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "pegen >= 0.3.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/pixyverse/pixy/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pixyverse*", "grammar*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.gram"]

[tool.black]
line-length = 127
target-version = ['py310','py311','py312']

[tool.mypy]
exclude = ['.venv', 'build', 'dist']
strict = true
disallow_untyped_decorators = false
check_untyped_defs = true


[[tool.mypy.overrides]]
module = "pixyverse.pixy.parser"
ignore_errors = true